--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,71 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
 
-a {
-  color: inherit;
-  text-decoration: none;
+:root {
+  --clr-bg: #f2f2f2;
+  --clr-text: #333;
+  --clr-pink: #d9b6ce;
+  --clr-green: #b2cdbc;
+  --clr-dark-pink: #e98998;
 }
-
 * {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+body {
+  background: var(--clr-bg);
+  color: var(--clr-text);
+  font-family: 'Nunito', sans-serif;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+img {
+  max-width: 100%;
+  height: auto;
+  dispaly: block;
+}
+.contain {
+  object-fit: contain;
+}
+.content {
+  max-width: 960px;
+  margin: 0 auto;
+  padding-inline: 1.5rem;
+}
+nav a.active {
+  color: #bd6e7a;
+}
+.title,
+.subtitle {
+  color: #333;
+  padding-bottom: 10px;
+  text-align: center;
+}
+.title {
+  font-size: 1.5rem;
+}
+.subtitle {
+  font-size: 1rem;
+}
+.pagelist {
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+.notfound {
+  text-align: center;
+  font-size: 0.9rem;
+}
+.pagelink {
+  text-decoration: underline;
+}
+footer {
+  display: block;
+  text-align: center;
+  padding: 30px 0;
+  margin-top: 60px;
+  color: #777;
+  font-size: 0.9rem;
+
+  border-top: 1px solid #eaeaea;
 }
